src_1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: security-service
spec:
  type: ClusterIP
  selector:
    app: security
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
